fix uneven seperator difference

--- a/src/anura.css
+++ b/src/anura.css
@@ -43,7 +43,8 @@ nav ul {
 
 nav li {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
     padding-top: 5px;
 }
 
